# neuralNetwork

./: CMakeLists.txt  main.cpp
classes/: MyBodyData.cpp  MyMatrix.cpp  MyMatrix.h
data/: cvNoMoving.csv  jsNoMoving.csv  test.csv  training.csv  ttNoMoving.csv  validation.csv
doc/: Doxyfile  ttNoMoving.csv
doc/html/: MyBodyData_8h_source.html  MyFile_8h_source.html  MyMatrix_8h_source.html  MyNetwork_8h_source.html  annotated.html  classMyBodyData-members.html  classMyBodyData.html  classMyFile-members.html  classMyFile.html  classMyMatrix-members.html  classMyMatrix.html  classMyNetwork-members.html  classMyNetwork.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions_8h_source.html  structdataPoint-members.html  structdataPoint.html
doc/html/search/: all_0.js  classes_1.js
doc/latex/: annotated.tex  classMyBodyData.tex  classMyFile.tex  classMyMatrix.tex  classMyNetwork.tex  refman.tex  structdataPoint.tex
src/: MyBodyData.cpp  MyBodyData.h  MyFile.cpp  MyFile.h  MyMatrix.cpp  MyMatrix.h  MyNetwork.cpp  MyNetwork.h  functions.cpp  functions.h
trash/: oldfile.cpp  oldfile.h
